# mypackage

./: .pre-commit-config.yaml  LICENSE.txt  pyproject.toml
mypackage/: __init__.py
